--- a/start.html
+++ b/start.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <git title>Document</title>
 </head>
 <body>
+    <h1>New Blog</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, maxime praesentium eaque accusamus, at tenetur illo a perspiciatis sequi deleniti nulla eos nemo corrupti necessitatibus deserunt ab vel ex fugiat nisi? Temporibus expedita illo beatae placeat, quam commodi ratione possimus!</p>
     <h1>My Start file is not index.html</h1>
 </body>
 </html>
