--- a/start.html
+++ b/start.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>New Blog</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, maxime praesentium eaque accusamus, at tenetur illo a perspiciatis sequi deleniti nulla eos nemo corrupti necessitatibus deserunt ab vel ex fugiat nisi? Temporibus expedita illo beatae placeat, quam commodi ratione possimus!</p>
+    <h5>Merge Conflict Resolved</h5>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, maxime praesentium eaque accusamus, at tenetur illo a perspiciatis sequi deleniti nulla eos nemo corrupti necessit atibus deserunt ab vel ex fugiat nisi? Temporibus expedita illo beatae placeat, quam commodi ratione possimus!</p>
     <h1>My Start file is not index.html</h1>
 </body>
 </html>
